# backend/admin-gin/api/openapi/swagger.json
@@ -163,6 +163,66 @@
                     }
                 }
             }
+        },
+        "/admin/user": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "支持分页以及条件查询",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "获取用户列表",
+                "operationId": "listUser",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "关键字：多字段综合搜索， email/username/uid",
+                        "name": "keyword",
+                        "in": "query"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "example": 1,
+                        "description": "当前页码，默认 1",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "角色：枚举",
+                        "name": "role",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 100,
+                        "minimum": 1,
+                        "type": "integer",
+                        "example": 10,
+                        "description": "每页数量，默认 10，最大 100",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "查询成功",
+                        "schema": {
+                            "$ref": "#/definitions/http.HttpResponse-http_PageRes-user_listRes"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -267,6 +327,89 @@
                     "description": "message: 响应描述",
                     "type": "string",
                     "example": "操作成功"
+                }
+            }
+        },
+        "http.HttpResponse-http_PageRes-user_listRes": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "code: HTTP 状态码",
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {
+                    "description": "data: 响应数据（可以为空）",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/http.PageRes-user_listRes"
+                        }
+                    ]
+                },
+                "message": {
+                    "description": "message: 响应描述",
+                    "type": "string",
+                    "example": "操作成功"
+                }
+            }
+        },
+        "http.PageRes-user_listRes": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "description": "列表",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/user.listRes"
+                    }
+                },
+                "page": {
+                    "description": "当前页码",
+                    "type": "integer",
+                    "example": 1
+                },
+                "size": {
+                    "description": "分页大小",
+                    "type": "integer",
+                    "example": 10
+                },
+                "total": {
+                    "description": "总数",
+                    "type": "integer",
+                    "example": 50
+                }
+            }
+        },
+        "user.listRes": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "description": "* 创建时间 (JSON会自动格式化为 RFC3339 字符串)",
+                    "type": "string"
+                },
+                "email": {
+                    "description": "* 邮箱",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "* ID (对应数据库的 UID) - 前端通常习惯叫 id",
+                    "type": "string"
+                },
+                "is_active": {
+                    "description": "* 账号状态",
+                    "type": "boolean"
+                },
+                "role": {
+                    "description": "* 角色标识",
+                    "type": "string"
+                },
+                "updated_at": {
+                    "description": "* 更新时间",
+                    "type": "string"
+                },
+                "username": {
+                    "description": "* 登录用户名",
+                    "type": "string"
                 }
             }
         }
